--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "url": "https://github.com/StartBootstrap/startbootstrap-bare.git"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.14.0",
         "bootstrap": "4.5.0",
         "interactjs": "^1.9.22",
         "jquery": "3.5.1",
